--- a/package.json
+++ b/package.json
@@ -189,6 +189,6 @@
     "watch": "gulp watch",
     "clean": "gulp clean",
     "heroku-postbuild": "gulp build --minify",
-    "test": "NODE_PATH=. MONGO_URL=mongodb://localhost/DemocracyOS-test gulp test"
+    "test": "NODE_PATH=. MONGO_URL=mongodb://192.168.99.100:27017/DemocracyOS-dev gulp test"
   }
 }
