--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "compression": "1.6.2",
     "cookie-parser": "1.4.3",
     "cors": "~2.8.1",
+    "create-react-class": "^15.6.0",
     "debug": "~2.6.3",
     "del": "~2.2.2",
     "democracyos-aurora-calendar": "^1.0.0",
@@ -164,6 +165,7 @@
     "react-refetch": "^1.0.0-beta.10",
     "react-remarkable": "^1.1.1",
     "react-router": "^2.6.1",
+    "react-router-dom": "^4.1.1",
     "removed": "0.0.5",
     "serve-favicon": "~2.4.1",
     "simple-line-icons": "^2.3.2",
