--- a/package.json
+++ b/package.json
@@ -178,6 +178,7 @@
     "t-component": "^1.0.0",
     "tags-input": "^1.1.1",
     "through2-concurrent": "~1.1.1",
+    "to-markdown": "^3.1.0",
     "transliteration": "~1.5.3",
     "type-component": "0.0.1",
     "uglifyify": "^3.0.2",
