--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "democracyos-headroom.js": "^0.7.0",
     "democracyos-list.js": "^1.1.4",
     "democracyos-loading-lock": "^0.1.0",
-    "democracyos-notifier": "2.1.1",
+    "democracyos-notifier": "https://gitlab.com/open-source-politics/democracyos-notifier.git#alt/agora-2.a",
     "democracyos-quill": "^0.19.12",
     "democracyos-timeago": "^0.0.1",
     "democracyos-tip": "^2.4.1",
