--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "page": "1.7.1",
     "passport": "~0.3.2",
     "passport-facebook": "~2.1.1",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "~1.0.0",
     "passport-local-mongoose": "~4.0.0",
     "prop-types": "~15.5.10",
