--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "migrate-mongoose": "^3.2.2",
     "mkdirp": "^0.5.0",
     "moment": "~2.18.1",
+    "mongodb": "^2.2.31",
     "mongoose": "~4.10.8",
     "mongoose-connection-ready": "^1.0.1",
     "mongoose-gravatar": "0.3.0",
