--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "react-dom": "^15.3.0",
     "react-google-recaptcha": "^0.9.7",
     "react-outside-event": "~1.2.4",
+    "react-piwik": "^1.0.7",
     "react-refetch": "^1.0.0-beta.10",
     "react-remarkable": "^1.1.1",
     "react-router": "^2.6.1",
