System RC1 : - new layout for /system - access in menu - per forum whitelist - general fixes

--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "prop-types": "~15.5.10",
     "react": "^15.3.0",
     "react-async-script": "^0.9.1",
+    "react-bootstrap": "^0.31.3",
     "react-dom": "^15.3.0",
     "react-google-recaptcha": "^0.9.7",
     "react-outside-event": "~1.2.4",
