--- a/package.json
+++ b/package.json
@@ -170,8 +170,8 @@
     "react-dom": "^15.3.0",
     "react-google-recaptcha": "^0.9.7",
     "react-outside-event": "~1.2.4",
-    "react-piwik": "^1.0.7",
     "react-paginate": "^5.0.0",
+    "react-piwik": "^1.0.7",
     "react-refetch": "^1.0.0-beta.10",
     "react-remarkable": "^1.1.1",
     "react-router": "^2.6.1",
@@ -180,6 +180,7 @@
     "serve-favicon": "~2.4.1",
     "simple-line-icons": "^2.3.2",
     "snyk": "^1.30.1",
+    "source-map": "0.6.1",
     "string-natural-compare": "~2.0.2",
     "striptags": "~3.0.1",
     "stylus": "~0.54.5",
