--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
   "extends": ["democracyos"],
-
+  "rules": {
+    "no-undef": [1]
+  },
   "settings": {
     "import/resolver": {
       "node": {
