--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "gulp-stylint": "4.0.0",
     "gulp-stylus": "2.6.0",
     "gulp-util": "~3.0.8",
+    "history": "^3.0.0",
     "http-auth": "3.1.3",
     "inserted": "0.0.4",
     "is-absolute-url": "~2.1.0",
