--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,9 @@
   "rules": {
     "no-undef": [1]
   },
+  "globals": {
+    "location"
+  },
   "settings": {
     "import/resolver": {
       "node": {
