upload image with the new react component

--- a/package.json
+++ b/package.json
@@ -173,8 +173,10 @@
     "react-chartjs": "^0.8.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^15.3.0",
+    "react-flip-move": "^3.0.1",
     "react-google-recaptcha": "^0.9.7",
     "react-helmet": "^5.2.0",
+    "react-image-upload": "0.0.1",
     "react-outside-event": "~1.2.4",
     "react-paginate": "^5.0.0",
     "react-piwik": "^1.0.7",
