--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "democracyos",
-  "version": "2.11.8",
+  "version": "2.11.13",
   "description": "An online space for deliberation and voting on political proposals. The software aims to stimulate better arguments and come to better rulings.",
   "homepage": "http://www.democracyos.org/",
   "license": "GPL-3.0",
@@ -180,7 +180,7 @@
     "react-input-range": "^1.3.0",
     "react-helmet": "^5.2.0",
     "react-outside-event": "~1.2.4",
-    "react-paginate": "^5.0.0",
+    "react-paginate": "5.1.0",
     "react-piwik": "^1.0.7",
     "react-refetch": "^1.0.0-beta.10",
     "react-remarkable": "^1.1.1",
