:arrow_up: Fix some dependencies issues

--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "babelify": "7.3.0",
     "batch": "~0.5.2",
     "bean": "^1.0.15",
-    "body-parser": "1.17.2",
+    "body-parser": "^1.18.3",
     "browserify": "~14.1.0",
     "bus": "0.1.0",
     "chart.js": "~1.1.1",
@@ -76,7 +76,7 @@
     "component-closest": "~1.0.1",
     "component-dom": "1.0.8",
     "component-spin": "0.1.1",
-    "compression": "1.6.2",
+    "compression": "^1.7.3",
     "cookie-parser": "1.4.3",
     "cors": "~2.8.1",
     "create-react-class": "^15.6.0",
@@ -105,7 +105,7 @@
     "democracyos-wrap": "~0.0.2",
     "domify": "^1.3.3",
     "escape-string-regexp": "~1.0.5",
-    "express": "4.15.3",
+    "express": "^4.16.3",
     "express-certbot-endpoint": "~1.0.0",
     "express-error-slack": "~0.3.1",
     "express-sslify": "1.2.0",
@@ -119,7 +119,7 @@
     "geopattern": "^1.2.3",
     "get-form-data": "~1.2.5",
     "gulp": "^3.9.1",
-    "gulp-add-src": "0.2.0",
+    "gulp-add-src": "^1.0.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-clean-css": "~3.0.4",
     "gulp-concat-css": "2.3.0",
@@ -136,7 +136,7 @@
     "is-my-schema-valid": "^1.0.3",
     "jade": "^1.11.0",
     "jadeify": "~4.6.0",
-    "jimp": "^0.2.28",
+    "jimp": "^0.3.9",
     "jsdom": "~9.12.0",
     "json-2-csv": "^2.1.0",
     "jwt-simple": "~0.5.1",
@@ -153,9 +153,9 @@
     "merge": "^1.2.0",
     "migrate-mongoose": "^3.2.2",
     "mkdirp": "^0.5.0",
-    "moment": "~2.18.1",
+    "moment": "^2.22.2",
     "mongodb": "^2.2",
-    "mongoose": "~4.10.8",
+    "mongoose": "^5.2.10",
     "mongoose-connection-ready": "^1.0.1",
     "mongoose-gravatar": "0.3.0",
     "mongoose-simple-random": "^0.4.1",
@@ -178,11 +178,11 @@
     "react-chartjs": "^0.8.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^15.3.0",
-    "react-input-range": "^1.3.0",
-    "react-helmet": "^5.2.0",
     "react-flip-move": "^3.0.1",
     "react-google-recaptcha": "^0.9.7",
+    "react-helmet": "^5.2.0",
     "react-image-upload": "0.0.1",
+    "react-input-range": "^1.3.0",
     "react-outside-event": "~1.2.4",
     "react-paginate": "^5.0.0",
     "react-piwik": "^1.0.7",
@@ -199,7 +199,7 @@
     "string-natural-compare": "~2.0.2",
     "striptags": "~3.0.1",
     "stylus": "~0.54.5",
-    "superagent": "^2.0.0",
+    "superagent": "^3.8.3",
     "t-component": "^1.0.0",
     "tags-input": "^1.1.1",
     "through2-concurrent": "~1.1.1",
@@ -220,7 +220,7 @@
     "arr-diff": "~3.0.0",
     "eslint": "~3.18.0",
     "eslint-config-democracyos": "~1.1.0",
-    "google-translate": "~2.0.4",
+    "google-translate": "^2.2.0",
     "gulp-image-resize": "^0.13.0",
     "gulp-jasmine": "^2.2.1",
     "gulp-pleeease": "^2.0.2",
