--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "batch": "~0.5.2",
     "bean": "^1.0.15",
     "body-parser": "^1.18.3",
-    "browserify": "~14.1.0",
+    "browserify": "^13.0.0",
     "bus": "0.1.0",
     "chart.js": "~1.1.1",
     "check-node-version": "~2.0.1",
@@ -183,8 +183,9 @@
     "react-helmet": "^5.2.0",
     "react-image-upload": "0.0.1",
     "react-input-range": "^1.3.0",
+    "react-helmet": "^5.2.0",
     "react-outside-event": "~1.2.4",
-    "react-paginate": "^5.0.0",
+    "react-paginate": "^4.0",
     "react-piwik": "^1.0.7",
     "react-refetch": "^1.0.0-beta.10",
     "react-remarkable": "^1.1.1",
