:construction: :bug: :arrow_up: Groups Fixes
- Migrate GroupUpdate to full React UX
- add Owners to Groups
- :construction: Permissions for users
- Bump MongoDB driver to 3.1.10 (change on `connect` and `populate)

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
     "no-undef": [1]
   },
   "globals": {
-    "location"
+    "location",
+    "FileReader"
   },
   "settings": {
     "import/resolver": {
